refactoring to get image from key, not uuid
